# template-robot

./: .bumpversion.cfg  README.md  setup.cfg  setup.py
.github/workflows/: ci.yml
src/libname/: version.py
