[metadata]
name = libname
version = 0.0.1
description = A template repository for a modern Python library
long_description = file: README.md
long_description_content_type = text/markdown
author = Author Name
author_email = author.name@email.com
license = Apache
license_file = LICENSE
keywords = python template
project_urls =
    Documentation = 
    Source = 
    Tracker = 
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[bdist_wheel]
universal = 1

[options]
setup_requires =
    setuptools_scm>=1.15.0
    setuptools_scm_git_archive>=1.0
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    click>=6.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    libname = libname.commandline:libname

[build_sphinx]
project = libname
source-dir = docs
build-dir = docs/_build
all-files = 1
warning-is-error = 1
